k8s/order_management_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-management
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-management
  template:
    metadata:
      labels:
        app: order-management
    spec:
      containers:
      - name: order-management
        image: 7abouba/ordermanagement:latest
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: order-management
spec:
  selector:
    app: order-management
  ports:
  - port: 5003
    targetPort: 5003
  type: ClusterIP
