k8s/product_catalogue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalogue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-catalogue
  template:
    metadata:
      labels:
        app: product-catalogue
    spec:
      containers:
      - name: product-catalogue
        image: product-catalogue:latest
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: product-catalogue
spec:
  selector:
    app: product-catalogue
  ports:
  - port: 5001
    targetPort: 5001
  type: ClusterIP
