k8s/shopfront_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopfront
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopfront
  template:
    metadata:
      labels:
        app: shopfront
    spec:
      containers:
      - name: shopfront
        image: 7abouba/shopfront:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: shopfront
spec:
  selector:
    app: shopfront
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
