k8s/stock_manager_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-manager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stock-manager
  template:
    metadata:
      labels:
        app: stock-manager
    spec:
      containers:
      - name: stock-manager
        image: stoufaa/stockmanager:latest
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: stock-manager
spec:
  selector:
    app: stock-manager
  ports:
  - port: 5002
    targetPort: 5002
  type: ClusterIP
