k8s/user_profile_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-profile
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-profile
  template:
    metadata:
      labels:
        app: user-profile
    spec:
      containers:
      - name: user-profile
        image: 7abouba/user-profile:latest
        ports:
        - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: user-profile
spec:
  selector:
    app: user-profile
  ports:
  - port: 5004
    targetPort: 5004
  type: ClusterIP
